html y css terminados

--- a/index.html
+++ b/index.html
@@ -3,7 +3,8 @@
 
 <head>
     <meta charset="UTF-8">
-    <title>Mi Página Web</title>
+    <title>Proyecto Bella Durmiente</title>
+    <link rel="icon" href="assets/logo.png" type="image/png">
     <link rel="stylesheet" href="styles.css">
 </head>
 
@@ -27,7 +28,7 @@
 
         <main>
             <section id="seccion1">
-                <h2>Introducción: Un Clásico de Innovación Visual</h2>
+                <h2 class="centrar-texto">Introducción: Un Clásico de Innovación Visual</h2>
 
                 <p><em>La Bella Durmiente</em> no solo es uno de los grandes clásicos de Disney, sino también una obra
                     maestra de la
@@ -51,7 +52,7 @@
             <hr />
 
             <section id="seccion2">
-                <h2>Proceso Artístico y Creativo: La Búsqueda de la Perfección</h2>
+                <h2 class="centrar-texto">Proceso Artístico y Creativo: La Búsqueda de la Perfección</h2>
 
                 <p>La producción de <em>La Bella Durmiente</em> comenzó incluso antes del estreno de <em>Cenicienta</em>
                     en
@@ -77,20 +78,21 @@
                     pinturas de
                     la época.
                 </p>
+                <img class="imagenesSecciones" src="assets/fondoEyvind.jpg">
                 <div class="tarjeta-curiosidad">
-                <h3 class="centrar-texto">Curiosidad: <strong>Diseño Visual</strong></h3>
+                    <h3 class="centrar-texto">Curiosidad: <strong>Diseño Visual</strong></h3>
 
-                <p>Los fondos de la película fueron diseñados por artistas especializados como <strong>Eyvind
-                        Earle</strong>, quien
-                    utilizó <strong>formas geométricas y líneas</strong> que creaban una sensación de "pintura en
-                    movimiento".</p>
+                    <p>Los fondos de la película fueron diseñados por artistas especializados como <strong>Eyvind
+                            Earle</strong>, quien
+                        utilizó <strong>formas geométricas y líneas</strong> que creaban una sensación de "pintura en
+                        movimiento".</p>
                     <div>
             </section>
 
             <hr />
 
             <section id="seccion3">
-                <h2>Influencias Artísticas en el Diseño Visual</h2>
+                <h2 class="centrar-texto">Influencias Artísticas en el Diseño Visual</h2>
 
                 <p><em>La Bella Durmiente</em> es un ejemplo sobresaliente de cómo la animación puede ser un lienzo para
                     las
@@ -117,12 +119,14 @@
                     personalidades
                     y físicos
                     distintos a las tres hadas buenas, lo que añadió profundidad y diversidad al relato visual.</p>
+
+                <img class="imagenesSecciones" src="assets/Aurora.webp">
             </section>
 
             <hr />
 
             <section id="seccion4">
-                <h2>La Música: La Sinfonía de Tchaikovsky</h2>
+                <h2 class="centrar-texto">La Música: La Sinfonía de Tchaikovsky</h2>
 
                 <p>La música de <em>La Bella Durmiente</em> es una de sus grandes fortalezas, complementando
                     perfectamente
@@ -144,27 +148,33 @@
                     perfecta sincronía
                     para crear una experiencia sensorial única que sigue siendo un referente en la historia del cine
                     animado.</p>
-                    <div class="tarjeta-curiosidad">
-                <h3 class="centrar-texto">Curiosidad: <strong>Música</strong></h3>
 
-                <p>La banda sonora de <em>La Bella Durmiente</em> es una de las más célebres en el cine animado, pero lo
-                    que
-                    muchos no
-                    saben es que, para la grabación, la <strong>Orquesta Sinfónica de Berlín</strong> tuvo que aprender
-                    a
-                    adaptar la
-                    partitura de Tchaikovsky para que pudiera integrarse con las escenas animadas. ¡Fue uno de los
-                    primeros
-                    casos en que
-                    se grabó una banda sonora orquestal completa antes de que las animaciones estuvieran completamente
-                    terminadas!</p>
+                    <img class="imagenesSecciones" src="assets/orquesta.jpg">
+
+                <div class="tarjeta-curiosidad">
+                    <h3 class="centrar-texto">Curiosidad: <strong>Música</strong></h3>
+
+                    <p>La banda sonora de <em>La Bella Durmiente</em> es una de las más célebres en el cine animado,
+                        pero lo
+                        que
+                        muchos no
+                        saben es que, para la grabación, la <strong>Orquesta Sinfónica de Berlín</strong> tuvo que
+                        aprender
+                        a
+                        adaptar la
+                        partitura de Tchaikovsky para que pudiera integrarse con las escenas animadas. ¡Fue uno de los
+                        primeros
+                        casos en que
+                        se grabó una banda sonora orquestal completa antes de que las animaciones estuvieran
+                        completamente
+                        terminadas!</p>
                     <div>
             </section>
 
             <hr />
 
             <section id="seccion5">
-                <h2>Coreografía y Animación: El Movimiento Como Arte</h2>
+                <h2 class="centrar-texto">Coreografía y Animación: El Movimiento Como Arte</h2>
 
                 <p>La influencia del ballet en <em>La Bella Durmiente</em> no se limita solo a la música, sino también a
                     la
@@ -196,20 +206,23 @@
                     visual
                     y musical.
                 </p>
-                <div class="tarjeta-curiosidad">
-                <h3 class="centrar-texto">Curiosidad: <strong>Coreografía y Animación</strong></h3>
 
-                <p>Se usaron <strong>técnicas de filmación en vivo</strong> para capturar los movimientos de los
-                    bailarines
-                    y crear
-                    coreografías de ballet realistas para los personajes.</p>
-            <div>
-                </section>
+                <img class="imagenesSecciones" src="assets/ballet.jpg">
+
+                <div class="tarjeta-curiosidad">
+                    <h3 class="centrar-texto">Curiosidad: <strong>Coreografía y Animación</strong></h3>
+
+                    <p>Se usaron <strong>técnicas de filmación en vivo</strong> para capturar los movimientos de los
+                        bailarines
+                        y crear
+                        coreografías de ballet realistas para los personajes.</p>
+                    <div>
+            </section>
 
             <hr />
 
             <section id="seccion6">
-                <h2>Conclusión: Una Obra de Arte Integrada</h2>
+                <h2 class="centrar-texto">Conclusión: Una Obra de Arte Integrada</h2>
 
                 <p><em>La Bella Durmiente</em> es un ejemplo brillante de cómo la animación puede combinar múltiples
                     influencias
